Return tasks for admin interface
All tasks for admin interface
