# common/api/swagger.json
@@ -30,6 +30,35 @@
     "application/json"
   ],
   "paths": {
+    "/admin/tasks": {
+      "get": {
+        "operationId": "getTask",
+        "x-loopback-model": "Task",
+        "x-loopback-method": "index",
+        "description": "Returns a collection of guide taks for the authenticated user",
+        "summary": "Fetch a list of guide taks",
+        "tags": [
+          "guide"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Collection"
+            }
+          },
+          "default": {
+            "description": "Unexpected error",
+            "schema": {
+              "$ref": "#/definitions/UnexpectedError"
+            }
+          }
+        }
+      }
+    },
     "/admin/tasks/{id}": {
       "put": {
         "operationId": "updateTask",
